--- a/index.html
+++ b/index.html
@@ -154,11 +154,16 @@
 
     
 
+    
+
   </ul>
 </div>
 
 
   <div>
+  <div class="small-print">
+    <small>©2016 Jac</small>
+  </div>
 </div>
 
 </div>
@@ -211,7 +216,12 @@
   </header>
 
   <p>
-  Połączenie z gniazdem unixowym Domyślnie usługa Docker zainstalowana na linuxie umożliwia komunikację z Docker Remote API używając gniazda /var/run/docker.sock. Podobnie jest w przypadku instalacji Docker dla Mac wykorzystującej xhyvie. konsola - curl Do przetestowania odpowiedzi demona wykorzystujemy najpierw klienta curl: $ curl -s --unix-socket /var/run/docker.sock http:/info | jq '.ContainersRunning' 2 Za pomocą jq ograniczono odpowiedź /info do wartości klucza .ContainersRunning, czyli 2. Należy zwrócić uwagę na http:/info i pojedynczy znak /.
+  <h2 id="połączenie-z-gniazdem-unixowym">Połączenie z gniazdem unixowym</h2>
+
+<p>Domyślnie usługa Docker zainstalowana na linuxie umożliwia komunikację z
+Docker Remote API używając gniazda <code>/var/run/docker.sock</code>. Podobnie jest
+w przypadku instalacji Docker dla Mac wykorzystującej xhyvie.</p>
+
   </p>
 
   
@@ -262,7 +272,13 @@
   </header>
 
   <p>
-  Organizacja kodu Zbudujmy przykładowe API do tworzenia notatek i tagów. Dane składowane są w PostgreSQL, do uproszczenia wyciągania danych z bazy użyty zostanie GORM. Natomiast do ułatwienia komunikacji HTTP oraz serializacji do formatu JSON wykorzystany zostanie framework Iris. Struktura plików aplikacji: notes (master) $ tree . ├── db │ └── pg │ └── pg.go ├── main.go ├── note │ ├── controller.go │ └── model.go └── tag ├── controller.go └── model.go 4 directories, 6 files Plik main.go stanowi punkt wejścia aplikacji.
+  <h2 id="organizacja-kodu">Organizacja kodu</h2>
+
+<p>Zbudujmy przykładowe API do tworzenia notatek i tagów. Dane składowane są w
+PostgreSQL, do uproszczenia wyciągania danych z bazy użyty zostanie GORM. Natomiast
+do ułatwienia komunikacji HTTP oraz serializacji do formatu JSON
+wykorzystany zostanie framework Iris.</p>
+
   </p>
 
   
@@ -307,9 +323,15 @@
   </header>
 
   <p>
-  Domyślnie pierwsza kolumna wpisu historii powłoki zawiera tylko id wykonanej komendy. Nie ma jednak informacji o czasie jej wykonania. Aby taką informację dodać, należy ustawić format czasu jaki powinien być wpisywany w zmienną środowiskową HISTTIMEFORMAT: HISTTIMEFORMAT='%H:%M:%S %d-%m-%Y '
+  <p>Domyślnie pierwsza kolumna wpisu historii powłoki zawiera tylko id wykonanej komendy. Nie ma jednak informacji o czasie jej wykonania.
+Aby taką informację dodać, należy ustawić format czasu jaki powinien być wpisywany w zmienną środowiskową <strong>HISTTIMEFORMAT</strong>:</p>
+
   </p>
 
+  
+  <footer>
+    <a href="https://practical-coder.github.io/notatki/post/historia-polecen-czas-wykonania-komendy/">Read more<i class="fa fa-angle-double-right fa-fw"></i></a>
+  </footer>
   
 </article>
 
@@ -352,7 +374,8 @@
   </header>
 
   <p>
-  W OS X polecenie netstat zachowuje się inaczej niż pod Linuxem. Do wypisania usług nasłuchujących na portach tcp lokalnej maszyny można użyć polecenia lsof. Przykładowo: sudo lsof -i tcp -nP -stcp:listen COMMAND PID USER FD TYPE DEVICE SIZE/OFF NODE NAME nginx 57 root 8u IPv4 0x44ebc4a200674587 0t0 TCP *:8080 (LISTEN) nginx 57 root 9u IPv4 0x44ebc4a2006721a7 0t0 TCP *:80 (LISTEN) nxserver. 78 nx 13u IPv4 0x44ebc4a201602397 0t0 TCP 127.0.0.1:23998 (LISTEN) ss_conn_s 79 root 7u IPv4 0x44ebc4a200673c8f 0t0 TCP 127.0.0.1:50911 (LISTEN) nginx 222 nobody 8u IPv4 0x44ebc4a200674587 0t0 TCP *:8080 (LISTEN) nginx 222 nobody 9u IPv4 0x44ebc4a2006721a7 0t0 TCP *:80 (LISTEN) nxd 266 nx 3u IPv4 0x44ebc4a200673397 0t0 TCP *:4000 (LISTEN) nxd 266 nx 4u IPv6 0x44ebc4a2015fbaaf 0t0 TCP *:4000 (LISTEN) mongod 427 jac 6u IPv4 0x44ebc4a202ae5587 0t0 TCP 127.0.0.1:27017 (LISTEN) java 431 jac 115u IPv6 0x44ebc4a2015fafef 0t0 TCP 127.0.0.1:9300 (LISTEN) java 431 jac 144u IPv6 0x44ebc4a20a9f600f 0t0 TCP 127.0.0.1:9200 (LISTEN) redis-ser 433 jac 4u IPv4 0x44ebc4a202a868af 0t0 TCP 127.0.0.1:6379 (LISTEN) postgres 443 jac 5u IPv6 0x44ebc4a2015fc56f 0t0 TCP [::1]:5432 (LISTEN) postgres 443 jac 6u IPv6 0x44ebc4a2015fc00f 0t0 TCP [fe80:1::1]:5432 (LISTEN) postgres 443 jac 7u IPv4 0x44ebc4a202a87a9f 0t0 TCP 127.0.0.1:5432 (LISTEN) SpotifyWe 444 jac 6u IPv4 0x44ebc4a202ae5e7f 0t0 TCP 127.0.0.1:4370 (LISTEN) SpotifyWe 444 jac 7u IPv4 0x44ebc4a202a88c8f 0t0 TCP 127.0.0.1:4380 (LISTEN) nxserver.
+  <p>W OS X polecenie <strong><code>netstat</code></strong> zachowuje się inaczej niż pod Linuxem. Do wypisania usług nasłuchujących na portach tcp lokalnej maszyny można użyć polecenia <strong><code>lsof</code></strong>. Przykładowo:</p>
+
   </p>
 
   
